# sxxtoolbox

./: CMakeLists.txt  LICENSE  README.md
include/: sxx_toolbox.h  sxxtoolbox.h
include/toolbox/: defs.h  dso.h  sxx_alloc.h  sxx_assert.h  sxx_atomic.h  sxx_cstr.h  sxx_defs.h  sxx_dso.h  sxx_list.h  sxx_mpool.h  sxx_mutex.h  sxx_plist.h  sxx_string.h  sxx_test.h  sxx_types.h  types.h
include/toolbox/arch/darwin/: sxx_arch_dso.h
include/toolbox/arch/linux/: sxx_arch_atomic.h  sxx_arch_dso.h  sxx_arch_mutex.h
include/toolbox/arch/win32/: sxx_arch_atomic.h  sxx_arch_dso.h  sxx_arch_mutex.h
src/: sxx_alloc.c  sxx_cstr.c  sxx_list.c  sxx_memory_pool.c  sxx_mpool.c  sxx_plist.c  sxx_string.c  sxx_test.c
src/arch/darwin/: sxx_arch_atomic.c  sxx_arch_dso.c
src/arch/linux/: sxx_arch_atomic.c  sxx_arch_dso.c  sxx_arch_mutex.c
src/arch/win32/: sxx_arch_atomic.c  sxx_arch_dso.c  sxx_arch_mutex.c
src/atomic/: sxx_win32_atomic.c
src/dso/: sxx_posix_dso.c  sxx_win32_dso.c
src/linux/: sxx_dso.c
src/win32/: sxx_dso.c
tests/: CMakeLists.txt  main.c  test_atomic.c  test_dso.c  test_list.c  test_memory_pool.c  test_string.c
tests/so/: test_dso_so.c  test_dso_so.h
